// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ImngPrimeODataTableDirective should fire OnInit 1`] = `
{
  "currentPageReportTemplate": "Showing {first} to {last} of {totalRecords} entries",
  "facade": {
    "activeEffectCount$": Observable {
      "_subscribe": [Function],
    },
    "loadEntities": [MockFunction],
    "reloadEntities": [MockFunction],
    "tableData$": Observable {
      "_subscribe": [Function],
    },
    "tableState$": Subject {
      "closed": false,
      "currentObservers": null,
      "hasError": false,
      "isStopped": false,
      "observers": [
        SafeSubscriber {
          "_finalizers": [
            Subscription {
              "_finalizers": null,
              "_parentage": [Circular],
              "closed": false,
              "initialTeardown": [Function],
            },
          ],
          "_parentage": null,
          "closed": false,
          "destination": ConsumerObserver {
            "partialObserver": {
              "complete": undefined,
              "error": undefined,
              "next": [Function],
            },
          },
          "initialTeardown": undefined,
          "isStopped": false,
        },
      ],
      "thrownError": null,
    },
    "totalRecordCount$": Observable {
      "_subscribe": [Function],
    },
  },
  "lazy": true,
  "loading": false,
  "onLazyLoad": Subject {
    "closed": false,
    "currentObservers": null,
    "hasError": false,
    "isStopped": false,
    "observers": [
      SafeSubscriber {
        "_finalizers": [
          Subscription {
            "_finalizers": null,
            "_parentage": [Circular],
            "closed": false,
            "initialTeardown": [Function],
          },
        ],
        "_parentage": null,
        "closed": false,
        "destination": ConsumerObserver {
          "partialObserver": {
            "complete": undefined,
            "error": undefined,
            "next": [Function],
          },
        },
        "initialTeardown": undefined,
        "isStopped": false,
      },
    ],
    "thrownError": null,
  },
  "paginator": true,
  "reorderableColumns": true,
  "resizableColumns": true,
  "responsiveLayout": "scroll",
  "rowHover": true,
  "rowsPerPageOptions": undefined,
  "showCurrentPageReport": true,
  "sortMode": "multiple",
  "styleClass": "p-datatable-gridlines",
  "totalRecords": 1,
  "validateSortParameters": [MockFunction],
  "value": [
    {
      "id": "apples",
    },
  ],
}
`;

exports[`ImngPrimeODataTableDirective should handle lazyload 1`] = `
{
  "currentPageReportTemplate": "Showing {first} to {last} of {totalRecords} entries",
  "facade": {
    "activeEffectCount$": Observable {
      "_subscribe": [Function],
    },
    "loadEntities": [MockFunction] {
      "calls": [
        [
          {
            "filters": {
              "xyz": [
                {
                  "matchMode": undefined,
                  "operator": "or",
                  "value": undefined,
                },
              ],
            },
            "first": 20,
            "globalFilter": "b",
            "multiSortMeta": [
              {
                "field": "x",
                "order": 1,
              },
            ],
          },
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "reloadEntities": [MockFunction],
    "tableData$": Observable {
      "_subscribe": [Function],
    },
    "tableState$": Subject {
      "closed": false,
      "currentObservers": null,
      "hasError": false,
      "isStopped": false,
      "observers": [
        SafeSubscriber {
          "_finalizers": [
            Subscription {
              "_finalizers": null,
              "_parentage": [Circular],
              "closed": false,
              "initialTeardown": [Function],
            },
          ],
          "_parentage": null,
          "closed": false,
          "destination": ConsumerObserver {
            "partialObserver": {
              "complete": undefined,
              "error": undefined,
              "next": [Function],
            },
          },
          "initialTeardown": undefined,
          "isStopped": false,
        },
      ],
      "thrownError": null,
    },
    "totalRecordCount$": Observable {
      "_subscribe": [Function],
    },
  },
  "globalFilterFields": [
    "xyz",
  ],
  "lazy": true,
  "loading": false,
  "multiSortMeta": [
    {
      "field": "x",
      "order": 1,
    },
  ],
  "onLazyLoad": Subject {
    "closed": false,
    "currentObservers": [
      SafeSubscriber {
        "_finalizers": [
          Subscription {
            "_finalizers": null,
            "_parentage": [Circular],
            "closed": false,
            "initialTeardown": [Function],
          },
        ],
        "_parentage": null,
        "closed": false,
        "destination": ConsumerObserver {
          "partialObserver": {
            "complete": undefined,
            "error": undefined,
            "next": [Function],
          },
        },
        "initialTeardown": undefined,
        "isStopped": false,
      },
    ],
    "hasError": false,
    "isStopped": false,
    "observers": [
      SafeSubscriber {
        "_finalizers": [
          Subscription {
            "_finalizers": null,
            "_parentage": [Circular],
            "closed": false,
            "initialTeardown": [Function],
          },
        ],
        "_parentage": null,
        "closed": false,
        "destination": ConsumerObserver {
          "partialObserver": {
            "complete": undefined,
            "error": undefined,
            "next": [Function],
          },
        },
        "initialTeardown": undefined,
        "isStopped": false,
      },
    ],
    "thrownError": null,
  },
  "paginator": true,
  "reorderableColumns": true,
  "resizableColumns": true,
  "responsiveLayout": "scroll",
  "rowHover": true,
  "rowsPerPageOptions": undefined,
  "showCurrentPageReport": true,
  "sortMode": "multiple",
  "styleClass": "p-datatable-gridlines",
  "totalRecords": 1,
  "validateSortParameters": [MockFunction] {
    "calls": [
      [
        [
          {
            "field": "x",
            "order": 1,
          },
        ],
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": [
          {
            "field": "x",
            "order": 1,
          },
        ],
      },
    ],
  },
  "value": [
    {
      "id": "apples",
    },
  ],
}
`;

exports[`ImngPrimeODataTableDirective should handle lazyload no filters 1`] = `
{
  "currentPageReportTemplate": "Showing {first} to {last} of {totalRecords} entries",
  "facade": {
    "activeEffectCount$": Observable {
      "_subscribe": [Function],
    },
    "loadEntities": [MockFunction] {
      "calls": [
        [
          {
            "first": 20,
            "multiSortMeta": [
              {
                "field": "x",
                "order": 1,
              },
            ],
          },
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "reloadEntities": [MockFunction],
    "tableData$": Observable {
      "_subscribe": [Function],
    },
    "tableState$": Subject {
      "closed": false,
      "currentObservers": null,
      "hasError": false,
      "isStopped": false,
      "observers": [
        SafeSubscriber {
          "_finalizers": [
            Subscription {
              "_finalizers": null,
              "_parentage": [Circular],
              "closed": false,
              "initialTeardown": [Function],
            },
          ],
          "_parentage": null,
          "closed": false,
          "destination": ConsumerObserver {
            "partialObserver": {
              "complete": undefined,
              "error": undefined,
              "next": [Function],
            },
          },
          "initialTeardown": undefined,
          "isStopped": false,
        },
      ],
      "thrownError": null,
    },
    "totalRecordCount$": Observable {
      "_subscribe": [Function],
    },
  },
  "lazy": true,
  "loading": false,
  "multiSortMeta": [
    {
      "field": "x",
      "order": 1,
    },
  ],
  "onLazyLoad": Subject {
    "closed": false,
    "currentObservers": [
      SafeSubscriber {
        "_finalizers": [
          Subscription {
            "_finalizers": null,
            "_parentage": [Circular],
            "closed": false,
            "initialTeardown": [Function],
          },
        ],
        "_parentage": null,
        "closed": false,
        "destination": ConsumerObserver {
          "partialObserver": {
            "complete": undefined,
            "error": undefined,
            "next": [Function],
          },
        },
        "initialTeardown": undefined,
        "isStopped": false,
      },
    ],
    "hasError": false,
    "isStopped": false,
    "observers": [
      SafeSubscriber {
        "_finalizers": [
          Subscription {
            "_finalizers": null,
            "_parentage": [Circular],
            "closed": false,
            "initialTeardown": [Function],
          },
        ],
        "_parentage": null,
        "closed": false,
        "destination": ConsumerObserver {
          "partialObserver": {
            "complete": undefined,
            "error": undefined,
            "next": [Function],
          },
        },
        "initialTeardown": undefined,
        "isStopped": false,
      },
    ],
    "thrownError": null,
  },
  "paginator": true,
  "reorderableColumns": true,
  "resizableColumns": true,
  "responsiveLayout": "scroll",
  "rowHover": true,
  "rowsPerPageOptions": undefined,
  "showCurrentPageReport": true,
  "sortMode": "multiple",
  "styleClass": "p-datatable-gridlines",
  "totalRecords": 1,
  "validateSortParameters": [MockFunction] {
    "calls": [
      [
        [
          {
            "field": "x",
            "order": 1,
          },
        ],
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": [
          {
            "field": "x",
            "order": 1,
          },
        ],
      },
    ],
  },
  "value": [
    {
      "id": "apples",
    },
  ],
}
`;

exports[`ImngPrimeODataTableDirective should handle lazyload no sorting 1`] = `
{
  "currentPageReportTemplate": "Showing {first} to {last} of {totalRecords} entries",
  "facade": {
    "activeEffectCount$": Observable {
      "_subscribe": [Function],
    },
    "loadEntities": [MockFunction] {
      "calls": [
        [
          {
            "filters": {
              "xyz": [
                {
                  "matchMode": "contains",
                  "operator": "and",
                  "value": "💩💩",
                },
              ],
            },
            "first": 20,
            "multiSortMeta": [],
          },
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "reloadEntities": [MockFunction],
    "tableData$": Observable {
      "_subscribe": [Function],
    },
    "tableState$": Subject {
      "closed": false,
      "currentObservers": null,
      "hasError": false,
      "isStopped": false,
      "observers": [
        SafeSubscriber {
          "_finalizers": [
            Subscription {
              "_finalizers": null,
              "_parentage": [Circular],
              "closed": false,
              "initialTeardown": [Function],
            },
          ],
          "_parentage": null,
          "closed": false,
          "destination": ConsumerObserver {
            "partialObserver": {
              "complete": undefined,
              "error": undefined,
              "next": [Function],
            },
          },
          "initialTeardown": undefined,
          "isStopped": false,
        },
      ],
      "thrownError": null,
    },
    "totalRecordCount$": Observable {
      "_subscribe": [Function],
    },
  },
  "lazy": true,
  "loading": false,
  "multiSortMeta": [],
  "onLazyLoad": Subject {
    "closed": false,
    "currentObservers": [
      SafeSubscriber {
        "_finalizers": [
          Subscription {
            "_finalizers": null,
            "_parentage": [Circular],
            "closed": false,
            "initialTeardown": [Function],
          },
        ],
        "_parentage": null,
        "closed": false,
        "destination": ConsumerObserver {
          "partialObserver": {
            "complete": undefined,
            "error": undefined,
            "next": [Function],
          },
        },
        "initialTeardown": undefined,
        "isStopped": false,
      },
    ],
    "hasError": false,
    "isStopped": false,
    "observers": [
      SafeSubscriber {
        "_finalizers": [
          Subscription {
            "_finalizers": null,
            "_parentage": [Circular],
            "closed": false,
            "initialTeardown": [Function],
          },
        ],
        "_parentage": null,
        "closed": false,
        "destination": ConsumerObserver {
          "partialObserver": {
            "complete": undefined,
            "error": undefined,
            "next": [Function],
          },
        },
        "initialTeardown": undefined,
        "isStopped": false,
      },
    ],
    "thrownError": null,
  },
  "paginator": true,
  "reorderableColumns": true,
  "resizableColumns": true,
  "responsiveLayout": "scroll",
  "rowHover": true,
  "rowsPerPageOptions": undefined,
  "showCurrentPageReport": true,
  "sortMode": "multiple",
  "styleClass": "p-datatable-gridlines",
  "totalRecords": 1,
  "validateSortParameters": [MockFunction] {
    "calls": [
      [
        [],
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": [],
      },
    ],
  },
  "value": [
    {
      "id": "apples",
    },
  ],
}
`;

exports[`ImngPrimeODataTableDirective should handle tableState Changes 1`] = `
{
  "currentPageReportTemplate": "Showing {first} to {last} of {totalRecords} entries",
  "facade": {
    "activeEffectCount$": Observable {
      "_subscribe": [Function],
    },
    "loadEntities": [MockFunction],
    "reloadEntities": [MockFunction],
    "tableData$": Observable {
      "_subscribe": [Function],
    },
    "tableState$": Subject {
      "closed": false,
      "currentObservers": [
        SafeSubscriber {
          "_finalizers": [
            Subscription {
              "_finalizers": null,
              "_parentage": [Circular],
              "closed": false,
              "initialTeardown": [Function],
            },
          ],
          "_parentage": null,
          "closed": false,
          "destination": ConsumerObserver {
            "partialObserver": {
              "complete": undefined,
              "error": undefined,
              "next": [Function],
            },
          },
          "initialTeardown": undefined,
          "isStopped": false,
        },
      ],
      "hasError": false,
      "isStopped": false,
      "observers": [
        SafeSubscriber {
          "_finalizers": [
            Subscription {
              "_finalizers": null,
              "_parentage": [Circular],
              "closed": false,
              "initialTeardown": [Function],
            },
          ],
          "_parentage": null,
          "closed": false,
          "destination": ConsumerObserver {
            "partialObserver": {
              "complete": undefined,
              "error": undefined,
              "next": [Function],
            },
          },
          "initialTeardown": undefined,
          "isStopped": false,
        },
      ],
      "thrownError": null,
    },
    "totalRecordCount$": Observable {
      "_subscribe": [Function],
    },
  },
  "filters": {
    "xyz": [
      {
        "matchMode": "contains",
        "operator": "and",
        "value": "💩💩",
      },
    ],
  },
  "first": 20,
  "lazy": true,
  "loading": false,
  "multiSortMeta": [
    {
      "field": "x",
      "order": 1,
    },
  ],
  "onLazyLoad": Subject {
    "closed": false,
    "currentObservers": null,
    "hasError": false,
    "isStopped": false,
    "observers": [
      SafeSubscriber {
        "_finalizers": [
          Subscription {
            "_finalizers": null,
            "_parentage": [Circular],
            "closed": false,
            "initialTeardown": [Function],
          },
        ],
        "_parentage": null,
        "closed": false,
        "destination": ConsumerObserver {
          "partialObserver": {
            "complete": undefined,
            "error": undefined,
            "next": [Function],
          },
        },
        "initialTeardown": undefined,
        "isStopped": false,
      },
    ],
    "thrownError": null,
  },
  "paginator": true,
  "reorderableColumns": true,
  "resizableColumns": true,
  "responsiveLayout": "scroll",
  "rowHover": true,
  "rows": 20,
  "rowsPerPageOptions": undefined,
  "showCurrentPageReport": true,
  "sortMode": "multiple",
  "styleClass": "p-datatable-gridlines",
  "totalRecords": 1,
  "validateSortParameters": [MockFunction],
  "value": [
    {
      "id": "apples",
    },
  ],
}
`;

exports[`ImngPrimeODataTableDirective should handle tableState Changes no filters 1`] = `
{
  "currentPageReportTemplate": "Showing {first} to {last} of {totalRecords} entries",
  "facade": {
    "activeEffectCount$": Observable {
      "_subscribe": [Function],
    },
    "loadEntities": [MockFunction],
    "reloadEntities": [MockFunction],
    "tableData$": Observable {
      "_subscribe": [Function],
    },
    "tableState$": Subject {
      "closed": false,
      "currentObservers": [
        SafeSubscriber {
          "_finalizers": [
            Subscription {
              "_finalizers": null,
              "_parentage": [Circular],
              "closed": false,
              "initialTeardown": [Function],
            },
          ],
          "_parentage": null,
          "closed": false,
          "destination": ConsumerObserver {
            "partialObserver": {
              "complete": undefined,
              "error": undefined,
              "next": [Function],
            },
          },
          "initialTeardown": undefined,
          "isStopped": false,
        },
      ],
      "hasError": false,
      "isStopped": false,
      "observers": [
        SafeSubscriber {
          "_finalizers": [
            Subscription {
              "_finalizers": null,
              "_parentage": [Circular],
              "closed": false,
              "initialTeardown": [Function],
            },
          ],
          "_parentage": null,
          "closed": false,
          "destination": ConsumerObserver {
            "partialObserver": {
              "complete": undefined,
              "error": undefined,
              "next": [Function],
            },
          },
          "initialTeardown": undefined,
          "isStopped": false,
        },
      ],
      "thrownError": null,
    },
    "totalRecordCount$": Observable {
      "_subscribe": [Function],
    },
  },
  "first": 20,
  "lazy": true,
  "loading": false,
  "multiSortMeta": [
    {
      "field": "x",
      "order": 1,
    },
  ],
  "onLazyLoad": Subject {
    "closed": false,
    "currentObservers": null,
    "hasError": false,
    "isStopped": false,
    "observers": [
      SafeSubscriber {
        "_finalizers": [
          Subscription {
            "_finalizers": null,
            "_parentage": [Circular],
            "closed": false,
            "initialTeardown": [Function],
          },
        ],
        "_parentage": null,
        "closed": false,
        "destination": ConsumerObserver {
          "partialObserver": {
            "complete": undefined,
            "error": undefined,
            "next": [Function],
          },
        },
        "initialTeardown": undefined,
        "isStopped": false,
      },
    ],
    "thrownError": null,
  },
  "paginator": true,
  "reorderableColumns": true,
  "resizableColumns": true,
  "responsiveLayout": "scroll",
  "rowHover": true,
  "rows": 20,
  "rowsPerPageOptions": undefined,
  "showCurrentPageReport": true,
  "sortMode": "multiple",
  "styleClass": "p-datatable-gridlines",
  "totalRecords": 1,
  "validateSortParameters": [MockFunction],
  "value": [
    {
      "id": "apples",
    },
  ],
}
`;

exports[`ImngPrimeODataTableDirective should handle tableState Changes no sorting 1`] = `
{
  "currentPageReportTemplate": "Showing {first} to {last} of {totalRecords} entries",
  "facade": {
    "activeEffectCount$": Observable {
      "_subscribe": [Function],
    },
    "loadEntities": [MockFunction],
    "reloadEntities": [MockFunction],
    "tableData$": Observable {
      "_subscribe": [Function],
    },
    "tableState$": Subject {
      "closed": false,
      "currentObservers": [
        SafeSubscriber {
          "_finalizers": [
            Subscription {
              "_finalizers": null,
              "_parentage": [Circular],
              "closed": false,
              "initialTeardown": [Function],
            },
          ],
          "_parentage": null,
          "closed": false,
          "destination": ConsumerObserver {
            "partialObserver": {
              "complete": undefined,
              "error": undefined,
              "next": [Function],
            },
          },
          "initialTeardown": undefined,
          "isStopped": false,
        },
      ],
      "hasError": false,
      "isStopped": false,
      "observers": [
        SafeSubscriber {
          "_finalizers": [
            Subscription {
              "_finalizers": null,
              "_parentage": [Circular],
              "closed": false,
              "initialTeardown": [Function],
            },
          ],
          "_parentage": null,
          "closed": false,
          "destination": ConsumerObserver {
            "partialObserver": {
              "complete": undefined,
              "error": undefined,
              "next": [Function],
            },
          },
          "initialTeardown": undefined,
          "isStopped": false,
        },
      ],
      "thrownError": null,
    },
    "totalRecordCount$": Observable {
      "_subscribe": [Function],
    },
  },
  "filters": {
    "xyz": [
      {
        "matchMode": "contains",
        "operator": "and",
        "value": "💩💩",
      },
    ],
  },
  "first": 20,
  "lazy": true,
  "loading": false,
  "multiSortMeta": [],
  "onLazyLoad": Subject {
    "closed": false,
    "currentObservers": null,
    "hasError": false,
    "isStopped": false,
    "observers": [
      SafeSubscriber {
        "_finalizers": [
          Subscription {
            "_finalizers": null,
            "_parentage": [Circular],
            "closed": false,
            "initialTeardown": [Function],
          },
        ],
        "_parentage": null,
        "closed": false,
        "destination": ConsumerObserver {
          "partialObserver": {
            "complete": undefined,
            "error": undefined,
            "next": [Function],
          },
        },
        "initialTeardown": undefined,
        "isStopped": false,
      },
    ],
    "thrownError": null,
  },
  "paginator": true,
  "reorderableColumns": true,
  "resizableColumns": true,
  "responsiveLayout": "scroll",
  "rowHover": true,
  "rows": 20,
  "rowsPerPageOptions": undefined,
  "showCurrentPageReport": true,
  "sortMode": "multiple",
  "styleClass": "p-datatable-gridlines",
  "totalRecords": 1,
  "validateSortParameters": [MockFunction],
  "value": [
    {
      "id": "apples",
    },
  ],
}
`;
